--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "zed",
     "theme",
     "converter",
-    "migration"
+    "migration",
+    "cli",
+    "terminal",
+    "editor"
   ],
   "author": "Ender Bonnet",
   "license": "MIT",
@@ -19,6 +22,7 @@
     "url": "https://github.com/enBonnet/migrazed/issues"
   },
   "homepage": "https://github.com/enBonnet/migrazed#readme",
+  "main": "./src/script.ts",
   "bin": {
     "migrazed": "./bin/migrazed"
   },
@@ -35,7 +39,8 @@
     "start": "bun run src/script.ts"
   },
   "engines": {
-    "bun": ">=1.0.0"
+    "bun": ">=1.0.0",
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
